# CFB

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CFB.sln  CMakeLists.txt  FAQ.md  README.md  azure-pipelines.yml  fuzzing-vm-setup.md  vcpkg.json
Broker/: Broker.hpp  Broker.rc  Broker.rc.in  Broker.vcxproj  Broker.vcxproj.filters  BrokerUtils.cpp  BrokerUtils.hpp  CMakeLists.txt  CfbException.cpp  CfbException.h  ConnectorManager.cpp  ConnectorManager.hpp  Context.cpp  Context.hpp  Driver.cpp  DriverManager.cpp  DriverManager.hpp  DriverManagerListener.cpp  Error.hpp  FrontEndServer.cpp  FrontEndServer.h  Irp.cpp  Irp.h  IrpManager.cpp  IrpManager.hpp  Main.cpp  ManagerBase.cpp  ManagerBase.hpp  Messages.cpp  Messages.hpp  PipeTransportManager.cpp  PipeTransportManager.h  SafeHandle.cpp  ServiceManager.cpp  ServiceManager.h  ServiceManager.hpp  Session.cpp  Session.h  States.hpp  Task.cpp  (+21 more)
Broker/Connectors/: Base.hpp  Dummy.cpp  Dummy.hpp
Broker/Headers/: Broker.hpp  BrokerUtils.hpp  ConnectorManager.hpp  DriverManager.hpp  Error.hpp  IrpManager.hpp  ManagerBase.hpp  Native.hpp  Resource.h  ServiceManager.hpp  pch.hpp
Broker/Headers/Connectors/: Base.hpp  Dummy.hpp  JsonQueue.hpp
Broker/Old/: Broker.rc  Broker.vcxproj.filters  CMakeLists.txt  FrontEndServer.cpp  FrontEndServer.h  Session.h  TaskManager.cpp  Utils.cpp  driver.h  nt.h
Broker/Source/: Broker.rc.in  BrokerUtils.cpp  ConnectorManager.cpp  DriverManager.cpp  DriverManagerListener.cpp  IrpManager.cpp  Main.cpp  ManagerBase.cpp  ServiceManager.cpp
Broker/Source/Connectors/: Dummy.cpp  JsonQueue.cpp
Broker/Tests/: CMakeLists.txt
Common/: CMakeLists.txt  Common.cpp  Common.hpp  Common.vcxproj  Common.vcxproj.filters  Comms.hpp  CompileInfo.hpp  CompileInfo.hpp.in  IoctlCodes.hpp  Log.cpp  Log.hpp  Messages.cpp  Messages.hpp  Utils.cpp  Utils.hpp  common.c  common.h  stdafx.c  stdafx.h
Common/Headers/: Common.hpp  Comms.hpp  CompileInfo.hpp.in  IoctlCodes.hpp  Log.hpp  Messages.hpp  Utils.hpp
Common/Source/: Comms.cpp  Log.cpp  Messages.cpp  Utils.cpp
Common/Tests/: CMakeLists.txt  Comms.cpp  Utils.cpp
Driver/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  CapturedIrp.cpp  CapturedIrp.hpp  CapturedIrpManager.cpp  CapturedIrpManager.hpp  Collector.cpp  Collector.hpp  Common.h  Context.hpp  Driver.c  Driver.h  Driver.inf  Driver.rc.in  Driver.vcxproj  Driver.vcxproj.filters  DriverUtils.cpp  DriverUtils.hpp  Entry.cpp  Entry.hpp  HookedDriver.cpp  HookedDriver.hpp  HookedDriverManager.cpp  HookedDriverManager.hpp  HookedDrivers.c  HookedDrivers.h  InterceptedIrpHandler.c  InterceptedIrpHandler.h  IoAddDriver.c  IoAddDriver.cpp  IoAddDriver.h  IoDriver.hpp  IoEnableDisableDriverMonitoring.c  IoEnableDisableDriverMonitoring.h  IoEnableDisableMonitoring.c  IoEnableDisableMonitoring.h  IoGetDriverInfo.c  IoGetDriverInfo.h  IoRemoveDriver.c  (+21 more)
Driver/Client/: CMakeLists.txt  Main.cpp
Driver/Headers/: Callbacks.hpp  CapturedIrp.hpp  CapturedIrpManager.hpp  Context.hpp  DriverUtils.hpp  HookedDriver.hpp  HookedDriverManager.hpp
Driver/Old/: Driver.vcxproj  IoEnableDisableMonitoring.h  IoGetDriverInfo.h  IoSetEventPointer.h  IoStoreTestCase.c  IoStoreTestCase.h  IoctlCodes.h
Driver/Source/: Callbacks.cpp  CapturedIrp.cpp  CapturedIrpManager.cpp  Driver.rc.in  DriverUtils.cpp  Entry.cpp  HookedDriver.cpp  HookedDriverManager.cpp
Driver/sdv/: Driver.inf  SDV-map.h  driver.c.rawcfgf  driver.c.rawcfgf.obj.li  hookeddrivers.c.rawcfgf  hookeddrivers.c.rawcfgf.obj.li  ioadddriver.c.rawcfgf  ioadddriver.c.rawcfgf.obj.li  iogetdriverinfo.c.rawcfgf  iogetdriverinfo.c.rawcfgf.obj.li  ioremovedriver.c.rawcfgf  ioremovedriver.c.rawcfgf.obj.li  ioseteventpointer.c.rawcfgf  ioseteventpointer.c.rawcfgf.obj.li  pipecomm.c.rawcfgf  pipecomm.c.rawcfgf.obj.li  queue.c.rawcfgf  queue.c.rawcfgf.obj.li  scan.li  sdv-harness.c  smvsrcfiles  utils.c.rawcfgf  utils.c.rawcfgf.obj.li
Driver/sdv/Driver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Driver.lastbuildstate  Inf2Cat.command.1.tlog  inf2cat-expand.9060.read.1.tlog  inf2cat-expand.9060.write.1.tlog  (+13 more)
GUI/: App.cpp  App.hpp  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CMakeLists.txt  GUI.csproj  GUI.rc.in  Helpers.cpp  Helpers.hpp  MainPage.xaml  MainPage.xaml.cs  Network.hpp  Package.appxmanifest  Settings.xaml  Settings.xaml.cs  Utils.cpp  Utils.hpp  main.cpp
GUI/Addons/: imgui_hexeditor.h
GUI/Controllers/: MonitoredIrpsController.cs
GUI/Headers/: App.hpp  GuiUtils.hpp  Helpers.hpp  Network.hpp
GUI/Helpers/: Constants.cs  Exceptions.cs  Nt.cs  Utils.cs
GUI/Model/: Irp.cs  MonitoredIrps.cs
GUI/Models/: BrokerMessage.cs  ConnectionManager.cs  Constants.cs  DbObject.cs  Device.cs  Driver.cs  IAsyncIrpDatabase.cs  Irp.cs  IrpDumper.cs  MonitoredIrps.cs
GUI/Native/: ErrorCodes.cs  Win32.cs
GUI/Properties/: AssemblyInfo.cs  Default.rd.xml
GUI/Repositories/: DriverRepository.cs  IAsyncDriverRepository.cs  IAsyncIrpRepository.cs  IrpRepository.cs
GUI/Resources/: BooleanToVisibilityConverter.cs
GUI/ScriptTemplates/: CTemplate.txt  PowershellTemplate.txt  PythonTemplate.txt
GUI/Source/: App.cpp  GUI.rc.in  GuiUtils.cpp
GUI/Tasks/: IrpDumperBackgroundClass.cs  IrpDumperBackgroundTask.cs
GUI/Tests/: CMakeLists.txt
GUI/UserControls/: CollapsibleSearchBox.xaml.cs  IrpSearchBox.xaml  IrpSearchBox.xaml.cs
GUI/ViewModels/: BrokerConnectionViewModel.cs  Converters.cs  DriverListPageViewModel.cs  DriverViewModel.cs  IrpReplay.cs  IrpViewModel.cs  MainViewModel.cs  MonitoredIrpViewModel.cs  MonitoredIrpsViewModel.cs  SaveLoadIrpsViewModel.cs  SessionInfoViewModel.cs
GUI/Views/: AboutPage.xaml  AboutPage.xaml.cs  DataGridHelper.cs  DriverListPage.xaml  DriverListPage.xaml.cs  IrpInfoPage.xaml  IrpInfoPage.xaml.cs  LoadIrpsFromFilePage.xaml  LoadIrpsFromFilePage.xaml.cs  MonitoredIrpsPage.xaml  MonitoredIrpsPage.xaml.cs  ReplayIrpPage.xaml  ReplayIrpPage.xaml.cs  SaveIrpsToFilePage.xaml  SaveIrpsToFilePage.xaml.cs  SessionInfoPage.xaml  SessionInfoPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
(+176 files in other folders)
